test/files/neg/t3873.check
t3873.scala:11: error: type mismatch;
 found   : Test.a.B
 required: a.B where val a: A
  wrongf(new A)(a.b) // should not compile
                  ^
one error found
